# shrimp

./: .clang-format  .gitignore  .gitignore.orig  .hgignore  .hgsigs  .travis.yml  AUTHORS.txt  CMakeLists.txt  README.md  SConstruct  shrimp.pro  ui_application_window.h  ui_block_code.h  ui_block_info.h  ui_block_input_output.h  ui_block_name.h  ui_code_preview.h  ui_options.h  ui_rib_block.h  ui_shader_properties.h
blocks/AOVs/: aov_ambient.xml  aov_caustics.xml  aov_diffuse.xml  aov_indirectdiffuse.xml  aov_occlusion.xml  aov_reflection.xml  aov_refraction.xml  aov_rimlighting.xml  aov_scattering.xml  aov_shadows.xml  aov_specular.xml  aov_specularcolor.xml  aov_surfacecolor.xml  aov_translucence.xml
blocks/Color/: bias.xml  blend.xml  ctransform.xml  gain.xml  gamma.xml  getcol.xml  luminance.xml  mix.xml  setcol.xml  tograyscale.xml  varyeach.xml
blocks/Conversion/: color2float.xml  color2normal.xml  color2point.xml  color2vector.xml  normal2color.xml  normal2point.xml  normal2vector.xml  point2color.xml  point2normal.xml  point2vector.xml  vector2color.xml  vector2normal.xml  vector2point.xml
blocks/Debug/: showdudv.xml  showfacing.xml  shownormals.xml  showst.xml  showuv.xml
blocks/Geometrical/: area.xml  bump.xml  calcnormal.xml  cxfresnel.xml  depth.xml  distance.xml  faceforward.xml  fresnel.xml  getcomp.xml  length.xml  normalize.xml  ptlined.xml  reflect.xml  refract.xml  rotate2d.xml  rotate3d.xml  schlickfresnel.xml  setcomp.xml  setxcomp.xml  setycomp.xml  setzcomp.xml  topolar2d.xml  transform.xml  xcomp.xml  ycomp.xml  zcomp.xml
blocks/Helpers/: brushedvector.xml  coordsys.xml  hairocclusion.xml  mpcurvature.xml  scurvature.xml  tangentmap.xml
blocks/Input/: alpha.xml  cl.xml  cs.xml  dpds.xml  dpdt.xml  dpdtime.xml  dpdu.xml  dpdv.xml  dtime.xml  dudv.xml  e.xml  i.xml  l.xml  n.xml  ncomps.xml  ng.xml  ol.xml  os.xml  p.xml  ps.xml  st.xml  time.xml  uv.xml
blocks/Layering/: blendcolors.xml  blendmode.xml  color_add.xml  color_average.xml  color_burn.xml  color_darken.xml  color_desaturate.xml  color_difference.xml  color_divide.xml  color_dodge.xml  color_exclusion.xml  color_hardlight.xml  color_illuminate.xml  color_lighten.xml  color_linearburn.xml  color_lineardodge.xml  color_linearlight.xml  color_multiply.xml  color_over.xml  color_overlay.xml  color_pinlight.xml  color_reflect.xml  color_saturate.xml  color_screen.xml  color_softlight.xml  color_softlightps.xml  color_subtract.xml  color_vividlight.xml
blocks/Lights/: ambientlight.xml  arealight.xml  distantlight.xml  envirolight.xml  gilight.xml  pointlight.xml  slideprojector.xml  spotlight.xml
blocks/Matrix/: arraylength.xml  determinant.xml  mgetcomp.xml  (+5 more)
doc/: block.xsl  content.xsl
examples/: bake2d_example1.xml  bakeptc_example.xml  bronze.xml  bronze_buddha_2.xml  bronze_buddha_3.xml  bumpmapping.xml  car_paint_flakes.xml  carpaint.xml  cobble_stone.xml  cracked_glazed_clay.xml  displacement.xml  displacement_surface_curvature.xml  earth_displacement.xml  giscene.xml  lichen.xml  lichen2.xml  lichen_3.xml  rt_environment.xml  sampling.xml  simple_aov_example.xml  tangent_normal_map.xml  voronoi_karlsruhemetric.xml  wood_buddha_gi.xml  wood_dragon:gi.xml  wood_dragon_gi.xml  woodpanel.xml
qt/: stylesheet.qss
shrimp/: AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  bootstrap  configure.ac
shrimp/blocks/: abs.shml  acos.shml  add.shml  and.shml  area.shml  asin.shml  atan.shml  bump.shml  calcnormal.shml  ceil.shml  cellnoise1d.shml  cellnoise2d.shml  cellnoise3d.shml  cellnoise4d.shml  clamp.shml  constant.shml  cos.shml  cross.shml  cs.shml  degrees.shml  depth.shml  deriv.shml  diffuse.shml  disc.shml  displace.shml  displacement_output.shml  distance.shml  divide.shml  dot.shml  dpdtime.shml  dtime.shml  du.shml  dudv.shml  dv.shml  e.shml  environment.shml  even.shml  exp.shml  faceforward.shml  fbm1d.shml  (+90 more)
shrimp/dialogtemplates/: about.gtkml  blockhelp.gtkml  codepreview.gtkml  colourselection.gtkml  ioproperties.gtkml  mainwindow.gtkml  renderoptions.gtkml  resizedialog.gtkml  shaderproperties.gtkml
shrimp/docs/: BlockWritingTutrial.html
shrimp/examples/: beachenv.tex  checker.shml  marble.shml  marble2.shml  minnaert.rib  minnaert.txt  minnaert_surface.shml  moon.shml  noise_bump.shml  noise_displace.shml  reflection.rib  reflection.txt  reflection_displace.shtml  reflection_surface.shtml  wibbly_rings.shml
shrimp/sdpgtk/: AUTHORS  Makefile  Makefile.am  Makefile.in  sdpgtkaccellabel.cpp  sdpgtkaccellabel.h  sdpgtkadjustment.cpp  sdpgtkadjustment.h  sdpgtkalignment.cpp  sdpgtkalignment.h  sdpgtkarrow.cpp  sdpgtkarrow.h  sdpgtkaspectframe.cpp  sdpgtkaspectframe.h  sdpgtkbin.cpp  sdpgtkbin.h  sdpgtkbox.cpp  sdpgtkbox.h  sdpgtkbutton.cpp  sdpgtkbutton.h  sdpgtkbuttonbox.cpp  sdpgtkbuttonbox.h  sdpgtkcalendar.cpp  sdpgtkcalendar.h  sdpgtkcheckbutton.cpp  sdpgtkcheckbutton.h  sdpgtkcheckmenuitem.cpp  sdpgtkcheckmenuitem.h  sdpgtkclipboard.cpp  sdpgtkclipboard.h  sdpgtkclist.cpp  sdpgtkclist.h  sdpgtkcolorselection.cpp  sdpgtkcolorselection.h  sdpgtkcolorselectiondialog.cpp  sdpgtkcolorselectiondialog.h  sdpgtkcolorselector.cpp  sdpgtkcolorselector.h  sdpgtkcombo.cpp  sdpgtkcombo.h  (+166 more)
shrimp/sdpgtk/docs/: gtkml.css  gtkmldoc.xml  makedocs.cpp
shrimp/sdptypes/: AUTHORS  Makefile  Makefile.am  Makefile.in  sdpfile.cpp  sdpstring.cpp  sdptypes.h
shrimp/sdpxml/: AUTHORS  Makefile  Makefile.am  Makefile.in  sdpxml.cpp  sdpxml.h  sdpxmlsax.cpp
shrimp/shaders/: ambientlight.sl  distantlight.sl  fractal.h  minnaert.h  shapes.h  shrimp_util.h  tile.h
shrimp/src/: .cvsignore  Makefile  Makefile.am  Makefile.in  block.cc  block.h  block_ops.cc  blockhelp.cc  blockhelp.h  circuit.cc  circuit.h  circuit_ops.cc  codepreview.cc  codepreview.h  gridentity.h  helpers.cc  helpers.h  iopad.cc  iopad.h  ioproperties.cc  ioproperties.h  mainwindow.cc  mainwindow.h  modaldialog.cc  modaldialog.h  renderoptions.cc  renderoptions.h  resizedialog.cc  resizedialog.h  shaderprop.cc  shaderprop.h  shrimp.cc
src/: opengl_view.cpp  opengl_view.h  services.cpp  services.h
(+412 files in other folders)
