SUBDIRS = .

lib_LTLIBRARIES = libsdpgtk.la

shrimpdir = $(pkgincludedir)/sdpgtk
shrimp_HEADERS = \
sdpgtkaccellabel.h \
sdpgtkadjustment.h \
sdpgtkalignment.h \
sdpgtkarrow.h \
sdpgtkaspectframe.h \
sdpgtkbin.h \
sdpgtkbox.h \
sdpgtkbuttonbox.h \
sdpgtkbutton.h \
sdpgtkcalendar.h \
sdpgtkcheckbutton.h \
sdpgtkcheckmenuitem.h \
sdpgtkclipboard.h \
sdpgtkclist.h \
sdpgtkcolorselectiondialog.h \
sdpgtkcolorselection.h \
sdpgtkcolorselector.h \
sdpgtkcombo.h \
sdpgtkcontainer.h \
sdpgtkctree.h \
sdpgtkcurve.h \
sdpgtkdata.h \
sdpgtkdialog.h \
sdpgtkdrawingarea.h \
sdpgtkeditable.h \
sdpgtkentry.h \
sdpgtkeventbox.h \
sdpgtkeventcreation.h \
sdpgtkevent.h \
sdpgtkeventscasting.h \
sdpgtkevents.h \
sdpgtkfileselection.h \
sdpgtkfileselector.h \
sdpgtkfixed.h \
sdpgtkfontselectiondialog.h \
sdpgtkfontselection.h \
sdpgtkframe.h \
sdpgtkgammacurve.h \
sdpgtkhandlebox.h \
sdpgtkhbox.h \
sdpgtkhbuttonbox.h \
sdpgtkhpaned.h \
sdpgtkhruler.h \
sdpgtkhscale.h \
sdpgtkhscrollbar.h \
sdpgtkhseparator.h \
sdpgtkimage.h \
sdpgtkinputdialog.h \
sdpgtkiobjectcontainer.h \
sdpgtkitem.h \
sdpgtklabel.h \
sdpgtklist.h \
sdpgtklistitem.h \
sdpgtkloopevents.h \
sdpgtkmenubar.h \
sdpgtkmenu.h \
sdpgtkmenuitem.h \
sdpgtkmenushell.h \
sdpgtkmisc.h \
sdpgtkmouseinput.h \
sdpgtknotebook.h \
sdpgtkobjectcontainer.h \
sdpgtkobject.h \
sdpgtkopenglcontext.h \
sdpgtkopengldrawingarea.h \
sdpgtkoptionmenu.h \
sdpgtkpaned.h \
sdpgtkpixmap.h \
sdpgtkplug.h \
sdpgtkradiobutton.h \
sdpgtkradiomenuitem.h \
sdpgtkrange.h \
sdpgtkruler.h \
sdpgtkscale.h \
sdpgtkscreenoverlay.h \
sdpgtkscrollbar.h \
sdpgtkscrolledwindow.h \
sdpgtkseparator.h \
sdpgtksocket.h \
sdpgtkspinbutton.h \
sdpgtkstatusbar.h \
sdpgtktable.h \
sdpgtktearoffmenuitem.h \
sdpgtktext.h \
sdpgtktipsquery.h \
sdpgtktogglebutton.h \
sdpgtktoolbar.h \
sdpgtktooltips.h \
sdpgtktree.h \
sdpgtktreeitem.h \
sdpgtkutility.h \
sdpgtkvbox.h \
sdpgtkvbuttonbox.h \
sdpgtkviewport.h \
sdpgtkvpaned.h \
sdpgtkvruler.h \
sdpgtkvscale.h \
sdpgtkvscrollbar.h \
sdpgtkvseparator.h \
sdpgtkwidget.h \
sdpgtkwidgets.h \
sdpgtkwindow.h

libsdpgtk_la_SOURCES = \
sdpgtkaccellabel.cpp \
sdpgtkadjustment.cpp \
sdpgtkalignment.cpp \
sdpgtkarrow.cpp \
sdpgtkaspectframe.cpp \
sdpgtkbin.cpp \
sdpgtkbox.cpp \
sdpgtkbutton.cpp \
sdpgtkbuttonbox.cpp \
sdpgtkcalendar.cpp \
sdpgtkcheckbutton.cpp \
sdpgtkcheckmenuitem.cpp \
sdpgtkclipboard.cpp \
sdpgtkclist.cpp \
sdpgtkcolorselection.cpp \
sdpgtkcolorselectiondialog.cpp \
sdpgtkcolorselector.cpp \
sdpgtkcombo.cpp \
sdpgtkcontainer.cpp \
sdpgtkctree.cpp \
sdpgtkcurve.cpp \
sdpgtkdata.cpp \
sdpgtkdialog.cpp \
sdpgtkdrawingarea.cpp \
sdpgtkeditable.cpp \
sdpgtkentry.cpp \
sdpgtkevent.cpp \
sdpgtkeventbox.cpp \
sdpgtkevents.cpp \
sdpgtkfileselection.cpp \
sdpgtkfileselector.cpp \
sdpgtkfixed.cpp \
sdpgtkfontselection.cpp \
sdpgtkfontselectiondialog.cpp \
sdpgtkframe.cpp \
sdpgtkgammacurve.cpp \
sdpgtkhandlebox.cpp \
sdpgtkhbox.cpp \
sdpgtkhbuttonbox.cpp \
sdpgtkhpaned.cpp \
sdpgtkhruler.cpp \
sdpgtkhscale.cpp \
sdpgtkhscrollbar.cpp \
sdpgtkhseparator.cpp \
sdpgtkimage.cpp \
sdpgtkinputdialog.cpp \
sdpgtkitem.cpp \
sdpgtklabel.cpp \
sdpgtklist.cpp \
sdpgtklistitem.cpp \
sdpgtkloopevents.cpp \
sdpgtkmenu.cpp \
sdpgtkmenubar.cpp \
sdpgtkmenuitem.cpp \
sdpgtkmenushell.cpp \
sdpgtkmisc.cpp \
sdpgtkmouseinput.cpp \
sdpgtknotebook.cpp \
sdpgtkobject.cpp \
sdpgtkobjectcontainer.cpp \
sdpgtkoptionmenu.cpp \
sdpgtkpaned.cpp \
sdpgtkpixmap.cpp \
sdpgtkplug.cpp \
sdpgtkradiobutton.cpp \
sdpgtkradiomenuitem.cpp \
sdpgtkrange.cpp \
sdpgtkruler.cpp \
sdpgtkscale.cpp \
sdpgtkscreenoverlay.cpp \
sdpgtkscrollbar.cpp \
sdpgtkscrolledwindow.cpp \
sdpgtkseparator.cpp \
sdpgtksocket.cpp \
sdpgtkspinbutton.cpp \
sdpgtkstatusbar.cpp \
sdpgtktable.cpp \
sdpgtktearoffmenuitem.cpp \
sdpgtktext.cpp \
sdpgtktipsquery.cpp \
sdpgtktogglebutton.cpp \
sdpgtktoolbar.cpp \
sdpgtktooltips.cpp \
sdpgtktree.cpp \
sdpgtktreeitem.cpp \
sdpgtkutility.cpp \
sdpgtkvbox.cpp \
sdpgtkvbuttonbox.cpp \
sdpgtkviewport.cpp \
sdpgtkvpaned.cpp \
sdpgtkvruler.cpp \
sdpgtkvscale.cpp \
sdpgtkvscrollbar.cpp \
sdpgtkvseparator.cpp \
sdpgtkwidget.cpp \
sdpgtkwindow.cpp

#libsdpgtk_la_LDFLAGS = -version-info @LIB_VERSION@
BUILT_SOURCES = sdpgtkevents.h sdpgtkevents.cpp
EXTRA_DIST = sdpgtkevents.data sdpgtkevents.cpp.awk sdpgtkevents.h.awk sdpgtkeventscasting.awk

CXXFLAGS = -g -Wall -DG_LOG_DOMAIN=\"SDPGTK\"
INCLUDES = -I$(top_srcdir) @SHRIMP_GTK_CFLAGS@ @SHRIMP_GLIB_CFLAGS@

sdpgtkevents.h: sdpgtkevents.data sdpgtkevents.h.awk
	awk -f $(top_srcdir)/sdpgtk/sdpgtkevents.h.awk $(top_srcdir)/sdpgtk/sdpgtkevents.data > $@

sdpgtkevents.cpp: sdpgtkevents.data sdpgtkevents.cpp.awk
	awk -f $(top_srcdir)/sdpgtk/sdpgtkevents.cpp.awk $(top_srcdir)/sdpgtk/sdpgtkevents.data > $@ 

